--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -1,4 +1,4 @@
-.navbar .navbar-nav {
+/* .navbar .navbar-nav {
     display: inline-block;
     float: none;
     vertical-align: top;
@@ -6,4 +6,8 @@
   
   .navbar .navbar-collapse {
     text-align: center;
-  }
+  } */
+
+  /* * {
+    outline: 0.5px solid rgb(121, 149, 98);
+  } */
