--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -8,6 +8,9 @@
     text-align: center;
   } */
 
-  /* * {
-    outline: 0.5px solid rgb(121, 149, 98);
-  } */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* outline: 0.5px solid rgb(121, 149, 98); */
+}
