--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -14,3 +14,9 @@ header {
         display: block;
     }
 }
+
+.hero-background {
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(56, 72, 56, 0.6)), url(../assets/img/background/pexels-photo-716661.webp);
+    // background-position: center;
+    background-size: cover;
+}
