--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -15,8 +15,45 @@ header {
     }
 }
 
-.hero-background {
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(56, 72, 56, 0.6)), url(../assets/img/background/pexels-photo-716661.webp);
-    // background-position: center;
-    background-size: cover;
+
+.hero {
+    overflow: hidden;
+}
+
+// .hero-background {
+//     background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(56, 72, 56, 0.6)), url(../assets/img/background/pexels-photo-716661.webp);
+//     // background-position: center;
+//     background-size: cover;
+// }
+
+.hero-video {
+    top: 0;
+    z-index: -10;
+
+    &::after {
+        content: '';
+        position: absolute;
+        z-index: 0;
+
+        width: 100%;
+        height: 100%;
+        
+        background: linear-gradient( rgba(238, 6, 6, 1), rgba(0, 0, 0, 0.5));
+        // background-color: color(primary, dark);
+        // mix-blend-mode: color;
+    }
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .hero-video {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    .hero-video {
+        width: auto;
+        height: 100%;
+    }
 }
