--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,4 +1,4 @@
-$primary: #54893e;
+$primary: rgb(84, 137, 62);
 // $secondary: #626668;
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
@@ -18,6 +18,24 @@ header {
 
 .hero {
     overflow: hidden;
+
+    &-video {
+        top: 0;
+        z-index: -10;
+
+        &-filter {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+
+            width: 100%;
+            height: 100vh;
+
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(84, 137, 62, 0.4));
+        }
+    }
+
 }
 
 // .hero-background {
@@ -26,23 +44,7 @@ header {
 //     background-size: cover;
 // }
 
-.hero-video {
-    top: 0;
-    z-index: -10;
 
-    &::after {
-        content: '';
-        position: absolute;
-        z-index: 0;
-
-        width: 100%;
-        height: 100%;
-        
-        background: linear-gradient( rgba(238, 6, 6, 1), rgba(0, 0, 0, 0.5));
-        // background-color: color(primary, dark);
-        // mix-blend-mode: color;
-    }
-}
 
 @media (min-aspect-ratio: 16/9) {
     .hero-video {
