--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -104,6 +104,14 @@ section {
 }
 
 
+/* COUNTER */
+.counter {
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(84, 137, 62, 0.4)), url(../assets/img/counter.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+
 .box-shadow {
     box-shadow: 0px 15px 25px rgba(0,0,0,0.08);
 }
