Feature: Projects gallery section

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -84,7 +84,7 @@ section {
 
 
     &-title {
-        margin-bottom: 3.75rem;
+        margin-bottom: 2.75rem;
 
         &-line {
             width: 60px;
@@ -139,4 +139,38 @@ section {
 
 }
 
+/* IMAGE ZOOM */
+.image-zoom {
+    position: relative;
+    /* overflow: hidden; */
+}
 
+.image-zoom-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
+.image-zoom-wrapper img{
+     transition: all 0.5s ease;
+}
+
+.image-zoom:hover .image-zoom-wrapper img {
+    transform: scale(1.1);
+}
+
+
+/* PORTFOLIO */
+.portfolio-item .iconbox {
+    background-color: $primary;
+    color: white;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.portfolio-item:hover .iconbox {
+    opacity: 1;
+    top: 50%;
+}
