--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -174,3 +174,14 @@ section {
     opacity: 1;
     top: 50%;
 }
+
+footer {
+
+    .line {
+        width: 60px;
+        height: 4px;
+        background-color: $primary;
+        margin-top: 0.75rem;
+        margin-bottom: 1.5rem;
+    }
+}
