--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -112,7 +112,7 @@ section {
 
 
 .box-shadow {
-    box-shadow: 0px 15px 25px rgba(0,0,0,0.08);
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.08);
 }
 
 
@@ -150,8 +150,8 @@ section {
     position: relative;
 }
 
-.image-zoom-wrapper img{
-     transition: all 0.5s ease;
+.image-zoom-wrapper img {
+    transition: all 0.5s ease;
 }
 
 .image-zoom:hover .image-zoom-wrapper img {
@@ -184,4 +184,26 @@ footer {
         margin-top: 0.75rem;
         margin-bottom: 1.5rem;
     }
+}
+
+
+.carousel {
+    height: 40vh;
+    padding: 0.5rem;
+
+    color: #170724;
+
+    --carousel-button-bg: #fff;
+    --carousel-button-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%),
+        0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+
+    --carousel-button-svg-width: 20px;
+    --carousel-button-svg-height: 20px;
+
+    --carousel-button-svg-stroke-width: 2.5;
+}
+
+
+#mainCarousel .carousel__slide {
+    width: 25%;
 }
