Feature: responsive carousel images

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -201,10 +201,10 @@ footer {
 
 
 .carousel {
-    height: 40vh;
     padding: 0.5rem;
 
     color: #170724;
+    border: 1px solid blue;
 
     --carousel-button-bg: #fff;
     --carousel-button-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%),
@@ -214,9 +214,26 @@ footer {
     --carousel-button-svg-height: 20px;
 
     --carousel-button-svg-stroke-width: 2.5;
+
 }
 
 
 #mainCarousel .carousel__slide {
-    width: 25%;
+    display: flex;
+    align-items: center;
+
+    width: 100%;
+    aspect-ratio: 1/1;
+
+    border: 1px solid rgb(84, 137, 62);
+
+    @include media-breakpoint-up(md) {
+        width: 30%;
+
+    }
+
+    @include media-breakpoint-up(lg) {
+        width: 20%;
+
+    }
 }
