--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -50,10 +50,21 @@ section {
 
 .hero {
     overflow: hidden;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(84, 137, 62, 0.4)), url('../assets/img//background//pexels-caio-45917.jpg');
+    background-size: cover;
+
+    @include media-breakpoint-up(md) {
+        background: unset;
+    }
 
     &-video {
+        display: none;
         top: 0;
         z-index: -10;
+
+        @include media-breakpoint-up(md) {
+            display: block;
+        }
 
         &-filter {
             position: absolute;
@@ -69,12 +80,6 @@ section {
     }
 
 }
-
-// .hero-background {
-//     background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(56, 72, 56, 0.6)), url(../assets/img/background/pexels-photo-716661.webp);
-//     // background-position: center;
-//     background-size: cover;
-// }
 
 
 
