--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -31,6 +31,11 @@ $navbar-heigh: 8vh;
     --bs-btn-disabled-color: rgb(255, 255, 255);
 }
 
+h1, h2, h3,h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    font-weight: 600;
+}
+
 header {
     display: none;
 }
