--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -86,6 +86,13 @@ img {
     }
 }
 
+
+.nav-item {
+    @include media-breakpoint-up(lg) {
+        border-top: 0 !important;
+    }    
+}
+
 .navbar-nav .nav-link {
     font-weight: 500;
     color: var(--c-dark);
