--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -134,7 +134,8 @@ section {
 
 .hero {
     overflow: hidden;
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(56, 72, 56, 0.5)), url('../assets/img//background//pexels-caio-45917.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(56, 72, 56, 0.5)), url('../assets/img/background/Background-1.jpg');
+    background-position: top left;
     background-size: cover;
 
     @include media-breakpoint-up(md) {
