--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -222,6 +222,7 @@ section {
         }
 
         p {
+            font-size: 1.5rem;
             max-width: 640px;
             margin-left: auto;
             margin-right: auto;
