--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -244,7 +244,7 @@ section {
 
 /* COUNTER */
 .counter {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(84, 137, 62, 0.6)), url(../assets/img/counter.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(84, 137, 62, 0.6)), url(../../assets/img/counter.jpg);
     background-position: center;
     background-size: cover;
 }
